add and update md files

--- a/43.md
+++ b/43.md
@@ -106,6 +106,7 @@ American bison
 Model Response A:
 CODE:
 
+```python
 # Import libraries
 
 import pandas as pd
@@ -136,6 +137,8 @@ last_10_animals = df['animals'].tail(10)
 # Print the last 10 animals
 
 print(last_10_animals.to_string(index=False))
+```
+
 RESULT:
 African bush elephant
 Asian elephant
