--- a/63.md
+++ b/63.md
@@ -155,6 +155,7 @@ Variance: 36.135420608688996
 Model Response A:
 CODE:
 
+```python
 import pandas as pd
 
 # Create a pandas dataframe
@@ -176,6 +177,8 @@ variance_of_speed = df['Speed'].var()
 
 print('Average speed:', average_speed)
 print('Variance of speed:', variance_of_speed)
+```
+
 RESULT:
 Average speed: 4.535831
 Variance of speed: 40.150467342987774
@@ -183,6 +186,7 @@ Variance of speed: 40.150467342987774
 Model Response B:
 Sure! Here is the code to calculate the average and variance for the above data:
 
+```python
 import pandas as pd
 
 # Create a pandas dataframe
@@ -204,6 +208,8 @@ variance_of_speed = df['Speed'].var()
 
 print('Average speed:', average_speed)
 print('Variance of speed:', variance_of_speed)
+```
+
 This code outputs the following:
 
 Statistic Value
