--- a/14.md
+++ b/14.md
@@ -35,6 +35,8 @@ File name: 462c733a-7405-49d3-98e5-9f3fbf604a09, in https://drive.google.com/cor
 Model Response A:
 CODE:
 
+```python
+
 import matplotlib.pyplot as plt
 
 # Create a list of animal names
@@ -56,3 +58,4 @@ plt.ylabel("Speed (km/h)")
 # Display the chart
 
 plt.show()
+```
