--- a/62.md
+++ b/62.md
@@ -61,6 +61,7 @@ https://drive.google.com/file/d/1VNKrkrgPThchORiLFvnsWUl5m16pzPiv/view?usp=drive
 Model Response A:
 CODE:
 
+```python
 import pandas as pd
 import matplotlib.pyplot as plt
 import numpy as np
@@ -111,3 +112,4 @@ plt.ylabel("Monthly Income")
 plt.tight_layout()
 
 plt.show()
+```
